--- a/gestione_prenotazioni/src/main/resources/application.properties
+++ b/gestione_prenotazioni/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=gestione_prenotazioni
+
+spring.datasource.url=jdbc:postgresql://localhost:5433/gestione_prenotazioni
+spring.datasource.username=postgres
+spring.datasource.password=1234
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.default_schema=public
+spring.jpa.hibernate.ddl-auto=create
+
